@@ -55,6 +55,20 @@
         "6", 
         "12x"
       ]
+    }, 
+    {
+      "author": "Grigori Fursin", 
+      "author_email": "Grigori.Fursin@cTuning.org", 
+      "author_webpage": "http://fursin.net", 
+      "copyright": "See CK COPYRIGHT.txt for copyright details", 
+      "engine": "CK", 
+      "iso_datetime": "2016-02-12T16:32:27.208000", 
+      "license": "See CK LICENSE.txt for licensing details", 
+      "version": [
+        "1", 
+        "6", 
+        "12x"
+      ]
     }
   ]
 }
